# SQL_project

./: .gitignore  README.md  env.example  pyproject.toml
models/: bootcampDB.mwb
src/: academic_reporting_queries.sql  create_tables_postgresql.sql  lectura datos.ipynb  load_data.py
