[project]
name = "2025-10-29-sql-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
